--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,7 @@ foreach(tapp co2injection_flash_ni_vcfv
              co2injection_immiscible_ni_vcfv
              co2injection_immiscible_vcfv
              co2injection_immiscible_ecfv
+						 co2injectionVE_immiscible_ecfv
              co2injection_ncp_ecfv
              co2injection_pvs_ecfv
              co2injection_immiscible_ni_ecfv
